--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Smile Please</h1>
     <h3>Get ready to learn about Git mama!</h3>
+    <p> That's a simple paragraph for new project. please don't delete this item. ok? </p>
 </body>
 </html>
