Hey get a commitment with me

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Smile Please</h1>
     <h3>Get ready to learn about Git mama!</h3>
     <p> That's a simple paragraph for new project. please don't delete this item. ok? </p>
+    <span color="red">Hey world, You are turning continously
+    </span>
 </body>
 </html>
