--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <body>
     <h1>Smile Please</h1>
     <h3>Get ready to learn about Git mama!</h3>
-    <p> That's a simple paragraph for new project. please don't delete this item. ok? </p>
-    <span color="red">Hey world, You are turning continously
-    </span>
+<span> Hey Jhone</span>
 </body>
 </html>
