--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Smile Please</h1>
     <h3>Get ready to learn about Git mama!</h3>
-<span> Hey Jhone</span>
+    <span> Hey Jhone</span>
+    <button>new style button setup done</button>
 </body>
 </html>
