--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h3>Get ready to learn about Git mama!</h3>
     <span> Hey Jhone</span>
     <button>new style button setup done</button>
+    <input type="Hey Input You confused me">
 </body>
 </html>
