--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input:focus{
+            font-size: 20px;
+            font-weight: 20px;
+            color: darkseagreen;
+        }
+       
+        li:last-child{
+            background: #dbbebe;
+        }
+        li:nth-child(2n){
+            background: #442ada;
+        }
+        li:nth-child(2n+1)
+        {
+            background: #48ce70;
+        }
+   .text{
+    font-size: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0px 100px 0px 0px;
+        }    
+
+    </style> 
 </head>
 <body>
+    
     <h1>Smile Please</h1>
     <br><br><br>
     <h3>Get ready to learn about Git mama!</h3>
@@ -29,5 +54,26 @@
         <option value="">Nepal</option>
         <option value="">Vutan</option>
     </select>
+    <h1>project one</h1>
+    <h2>project two</h2>
+    <br><br>
+    <h1 class="Turbo">Why you boar?</h1>
+    <input type="text" name="text" id="">
+    <br>
+    <br>
+    <input type="text" name="password" id="">
+    <br><br>
+    <ul class="text">
+        <li>one</li>
+        <li>two</li>
+        <li>Three</li>
+        <li>Four</li>
+        <li>Five</li>
+        <li>Six</li>
+        <li>Seven</li>
+        <li>Eight</li>
+        <li>Nine</li>
+        <li>Ten</li>
+    </ul>
 </body>
 </html>
