check done main

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
     font-size: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0px 100px 0px 0px;
-        }    
-
+        }
+    .job:before{
+        content: "Opps" ;
+        background: #c92f2f;
+        color:white;
+    }
     </style> 
 </head>
 <body>
-    
+    <h1 class="job">Nobody with me</h1>
     <h1>Smile Please</h1>
     <br><br><br>
     <h3>Get ready to learn about Git mama!</h3>
@@ -75,5 +79,6 @@
         <li>Nine</li>
         <li>Ten</li>
     </ul>
+  
 </body>
 </html>
