update for new job

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            background: pink;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-weight: bold;
+            font-display: fixed;
+            }
+        body{
+            margin: auto;
+            position: fixed;
+            display: flex;
+         }
+    </style>
 </head>
 <body>
-    <h1>Smile Please</h1>
-    <h3>Get ready to learn about Git mama!</h3>
-<span> Hey Jhone</span>
+    <h1>Thanks for visit my website</h1>
 </body>
 </html>
