--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-<<<<<<< HEAD
-<<<<<<< HEAD
-        h1{
-            background: pink;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            font-display: fixed;
-            }
-        body{
-            margin: auto;
-            position: fixed;
-            display: flex;
-         }
+        .job::before{
+            content: "Wow"
+        }
     </style>
 </head>
 <body>
